Wed Jun 25 14:09:52 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * rpmbuild/ace-tao-config.patch
          Removed ACE_GPERF

        * rpmbuild/ace-tao.spec:
          Document changes

        * rpmbuild/ace-tao-gperf-info.patch:
          Removed, not needed anymore

Wed Jun 25 13:29:13 UTC 2008  J.T. Conklin  <jtc@acorntoolworks.com>

        * m4/config_h.m4:
        * configure.ac:

          Remove feature test and autoheader template for
          ACE_HAS_BROKEN_NETBSD_MSYNC.

        * ace/OS_NS_sys_mman.inl:

          Remove the use of the ACE_HAS_BROKEN_NETBSD_MSYNC feature test
          macro. It was removed since ACE no longer supports the systems
          that required it.

Wed Jun 25 11:23:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * ace/Monitor_Control/Bytes_Received_Monitor.cpp:

          Tue Jun 24 11:46:41 UTC 2008  Jeff Parsons committed
          Miss-cased ACE_TEXT.

Wed Jun 25 10:00:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * bin/fuzz.pl:

          Enhance ACE_TMAIN and ORB_init checks for /* .. */ comments.

Wed Jun 25 06:58:52 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * apps/gperf/gperf.1:
        * apps/gperf/gperf.info:
        * apps/gperf/gperf.mpc:
        * apps/gperf/gperf.texi:
        * apps/gperf/ace_gperf.1:
        * apps/gperf/ace_gperf.info:
        * apps/gperf/ace_gperf.mpc:
        * apps/gperf/ace_gperf.texi:
        * apps/gperf/gperf/src/gperf.mpc:
        * apps/gperf/gperf/tests/gperf_test.mpb:
        * apps/gperf/gperf/tests/Makefile.am:
          Renamed gperf to ace_gperf to make sure we always get the gperf
          from ace, fedora also has a regular gperf package

        * include/makeinclude/platform_vxworks5.5.x.GNU:
        * include/makeinclude/platform_vxworks6.2.GNU:
        * include/makeinclude/platform_vxworks6.3.GNU:
          Updated for gperf rename

        * rpmbuild/ace-tao.spec: